--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 
     }
     </script>
+    
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body style="text-align: center;">
 
 <form action="">
     <label for="">Usuario</label>
-    <input type="text" name="" id="usuario">
+    <input type="text" id="usuario">
     <br>
     <label for="">Contraseña</label>
-    <input type="text" name="" id="contraseña">
+    <input type="text" id="contraseña">
     <br>
 
     <button type="button" onclick="entra();">Entrar</button>
